<resources>
    <string name="app_name">Plumpy</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export</string>
    <string name="action_clear">Clear</string>
    <string name="action_reset">Reset</string>

    <string name="menu_home">Home</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_device">About device</string>
    <string name="title_activity_bletest">BLETestActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sleep_time_label">Длительность сна:</string>
    <string name="fast_sleep_time_label">Быстрый сон:</string>
    <string name="slow_sleep_time_label">Медленный сон:</string>
    <string name="time_init_value">0:0</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="walk_time_label">Ходьба:</string>
    <string name="run_time_label">Бег:</string>
    <string name="save">Save</string>
    <string name="your_personal_data">Your personal data</string>
    <string name="age">Age:</string>
    <string name="surname">Surname:</string>
    <string name="name">Name:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="searching_bands">Searching bands...</string>
    <string name="plumpy">PLUMPY</string>
    <string name="new_device">New Device</string>
    <string name="find_device_text">Hello friend, it looks like you are the first time in our application, connect your companion device by clicking on this button</string>
</resources>