<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF98579A"
    tools:context=".ui.home.ActivityFragment">

    <Button
        android:id="@+id/bDateActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:button="?android:selectableItemBackground"
        android:onClick="datePickOnClick"
        android:textColor="#DCC5DB"
        android:translationY="75dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_time_label"
        android:textColor="#DCC5DB"
        android:textSize="20sp"
        android:translationX="20dp"
        android:translationY="500dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_time_label"
        android:textColor="#DCC5DB"
        android:textSize="20sp"
        android:translationX="20dp"
        android:translationY="450dp" />

    <TextView
        android:id="@+id/run_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_init_value"
        android:textColor="#DCC5DB"
        android:textSize="20sp"
        android:translationX="250dp"
        android:translationY="500dp" />

    <TextView
        android:id="@+id/walk_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_init_value"
        android:textColor="#DCC5DB"
        android:textSize="20sp"
        android:translationX="250dp"
        android:translationY="450dp" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/activityBarChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:translationY="125dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#4E1050"
        android:orientation="horizontal"
        android:padding="15dp">

        <RadioButton
            android:id="@+id/rbDay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="?android:selectableItemBackground"
            android:onClick="radioButtonClick"
            android:checked="true"
            android:text="@string/day"
            android:textColor="#DCC5DB"
            android:translationX="25dp"/>

        <RadioButton
            android:id="@+id/rbMonth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="?android:selectableItemBackground"
            android:onClick="radioButtonClick"
            android:text="@string/month"
            android:textColor="#DCC5DB"
            android:translationX="100dp"/>

        <RadioButton
            android:id="@+id/rbYear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="?android:selectableItemBackground"
            android:onClick="radioButtonClick"
            android:text="@string/year"
            android:textColor="#DCC5DB"
            android:translationX="175dp" />
    </RadioGroup>

</FrameLayout>