<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceConnectionActivity">

    <ImageView
        android:id="@+id/midImage2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#78327B"
        android:rotation="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plum_run_1"
        tools:layout_editor_absoluteY="-66dp" />

    <Button
        android:id="@+id/newConnection"
        android:layout_width="132dp"
        android:layout_height="42dp"
        android:layout_marginBottom="30dp"
        android:background="#4E1050"
        android:ellipsize="none"
        android:onClick="newConnectionOnClick"
        android:shadowColor="#FBFBE0"
        android:text="@string/new_device"
        android:textColor="#DBC4DA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/plumpy"
        android:textColor="#DCC5DB"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/midImage2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/find_device_text"
        android:textColor="#DCC5DB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/midImage2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>